--- a/components/plasmic/isv/PlasmicHomepage.module.css
+++ b/components/plasmic/isv/PlasmicHomepage.module.css
@@ -61,28 +61,6 @@
   > img {
   margin-top: 0px;
 }
-.freeBox___8Tr6E {
-  position: relative;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  min-width: 0;
-  display: none;
-  padding: 8px;
-}
-.text__cUiys {
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  text-align: center;
-  font-family: "Indie Flower";
-  font-size: 60px;
-  line-height: 1.5;
-  min-width: 0;
-}
 .img {
   position: relative;
   object-fit: cover;
@@ -149,6 +127,7 @@
   }
 }
 .freeBox__wrEd8 {
+  display: flex;
   position: relative;
   flex-direction: column;
   align-items: center;
@@ -157,7 +136,6 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  display: none;
   padding: 8px;
 }
 .link {
